--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.9",
+  "version": "0.0.10",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -19,7 +19,8 @@
     "size": "size-limit",
     "analyze": "size-limit --why",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "deploy-storybook": "storybook-to-ghpages"
   },
   "peerDependencies": {
     "react": ">=16"
@@ -61,6 +62,7 @@
     "@storybook/cli": "^7.0.7",
     "@storybook/react": "^7.0.7",
     "@storybook/react-webpack5": "^7.0.7",
+    "@storybook/storybook-deployer": "^2.8.16",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "babel-loader": "^9.1.2",
