--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.10",
+  "version": "0.0.11",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -81,8 +81,13 @@
     "@dicebear/avatars": "^4.10.8",
     "@dicebear/collection": "^6.0.3",
     "@dicebear/core": "^6.0.3",
+    "@storybook/addon-docs": "^7.0.8",
     "@types/styled-components": "^5.1.26",
     "react-inlinesvg": "^3.0.2",
     "styled-components": "^5.3.10"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/renebfelix/library-storybook.git"
   }
 }
